...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true">

            <Button
                android:id="@+id/buttonExplorer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimary"
                android:onClick="goToDiscover"
...
            android:scaleY="2"
            app:srcCompat="@drawable/favs_home"
            android:onClick="goToFav"
            />

            <ImageView
                android:id="@+id/icon_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
...
