...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_food"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/referencia"
                    tools:ignore="MissingConstraints" />

...
                android:id="@+id/constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <TextView
                    android:id="@+id/title_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_name"
                    android:textColor="@color/black_overlay"
                    android:textSize="14dp"
                    android:textStyle="bold"
...
