...
            >

            <ImageView
                android:id="@+id/icon_not_like"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignTop="@+id/icon_like"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
...
